--- a/source/R5T.Sitonia.Base/R5T.Sitonia.Base.csproj
+++ b/source/R5T.Sitonia.Base/R5T.Sitonia.Base.csproj
@@ -7,5 +7,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.Philippi\source\R5T.Philippi\R5T.Philippi.csproj" />
     <ProjectReference Include="..\..\..\R5T.Sparta.Types\source\R5T.Sparta.Types\R5T.Sparta.Types.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064\R5T.T0064.csproj" />
   </ItemGroup>
 </Project>
