--- a/source/R5T.Sitonia.Base.Construction/R5T.Sitonia.Base.Construction.csproj
+++ b/source/R5T.Sitonia.Base.Construction/R5T.Sitonia.Base.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\R5T.Sitonia.Base\R5T.Sitonia.Base.csproj" />
   </ItemGroup>
